--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # flutter_screenutil: ^5.5.3+1
   flutter_svg: ^1.0.3
@@ -58,9 +61,9 @@ dependencies:
   share_plus: ^6.3.0
   screenshot: ^1.3.0
   flutter_carousel_widget: ^1.2.2
-  google_mobile_ads: ^2.3.0
+  # google_mobile_ads: ^2.3.0
   firebase_core: ^2.4.1
-  awesome_dialog: ^3.0.2
+  # awesome_dialog: ^3.0.2
   # chewie: ^1.4.0
   url_launcher: ^6.1.8
   # new_version: ^0.3.0
@@ -69,7 +72,7 @@ dependencies:
   firebase_messaging: ^14.2.1
   shimmer: ^2.0.0
   lottie: ^2.2.0
-  firebase_analytics: ^10.1.0
+  # firebase_analytics: ^10.1.0/
   # upgrader: ^6.0.1
   # upgrader:
   # animation_wrappers: ^3.0.0
@@ -83,13 +86,9 @@ dependencies:
   # screenshot_callback:
 
   # ----------------Video player packages------------------------------
-  better_player:
-    git:
-      url: https://github.com/matthewrice345/betterplayer.git
-      ref: Issue1057
-  # reels_viewer: ^1.0.0+3
+  
   card_swiper: ^2.0.4
-  video_player: ^2.6.1
+  # video_player: ^2.6.1
   # video_editor:
 
   flutter_cache_manager: ^3.3.1
@@ -111,8 +110,8 @@ dependencies:
   youtube_player_iframe: ^4.0.4
   gif:
 
-  sms_autofill: ^2.3.0
-
+  # sms_autofill: ^2.3.0
+  flutter_tts: ^4.0.2
   permission_handler: ^10.2.0
   package_info_plus:
   font_awesome_flutter: ^10.4.0
@@ -131,31 +130,69 @@ dependencies:
   flutter_chat_bubble: ^2.0.2
   any_link_preview: ^3.0.0
   flutter_contacts:
-  unsplash_client: ^2.2.0
+  fl_chart:
+  # qr_code_scanner: ^1.0.1
+  # qr_flutter: ^3.2.0
+  # barcode_scan_fix:
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.11.0
-  image_editor_plus: ^0.1.8
-  # google_fonts: ^3.0.1
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/app_icon.png"
-
+  image_path: "assets/images/logo.png"
+# The following section is specific to Flutter packages.
 flutter:
+
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
   uses-material-design: true
 
+  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/translation/
     - assets/images/
     - assets/test/
     - assets/frames/
     - assets/icons/
-    - assets/images/banners/
-    - assets/images/frames/
 
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
