--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -154,7 +154,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/logo.jpg"
 # The following section is specific to Flutter packages.
 flutter:
 
