--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,11 +4,30 @@
     <intent>
     <action android:name="android.intent.action.TTS_SERVICE" />
     </intent>
+    
    </queries>
    <application
         android:label="Bhagwat Gita - All 700 Shloks"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+        <receiver 
+            android:name="me.carda.awesome_notifications.notifications.receivers.ActionReceiver" 
+            android:exported="true"/>
+        <receiver 
+            android:name="me.carda.awesome_notifications.notifications.receivers.DismissedReceiver" 
+            android:exported="true"/>
+        <receiver 
+            android:name="me.carda.awesome_notifications.notifications.receivers.NotificationReceiver" 
+            android:exported="true"/>
+        <receiver 
+            android:name="me.carda.awesome_notifications.notifications.receivers.RestoreReceiver" 
+            android:exported="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,5 +55,11 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
+
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
