--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -134,6 +134,7 @@ dependencies:
   # qr_code_scanner: ^1.0.1
   # qr_flutter: ^3.2.0
   # barcode_scan_fix:
+  awesome_notifications:
 
 
 dev_dependencies:
